force-app/main/default/objects/User/fields/bgcc__Terms_And_Conditions_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>bgcc__Terms_And_Conditions_Accepted_Date__c</fullName>
    <description>Date and time user agreed to terms and conditions when self-registering</description>
    <label>Terms And Conditions Accepted Date</label>
    <type>DateTime</type>
</CustomField>