force-app/main/default/objects/User/fields/MUSW__BG_BlueBeam_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>MUSW__BG_BlueBeam_Email_Address__c</fullName>
    <label>BlueBeam Email Address</label>
    <type>Email</type>
</CustomField>