force-app/main/default/objects/User/fields/MUSW__Debug__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Debug__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debug</label>
    <type>Checkbox</type>
</CustomField>