force-app/main/default/objects/User/fields/MUSW__isFutureRunning__c.field-meta.xml
<CustomField>
    <fullName>MUSW__isFutureRunning__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Stop processes that are running in future mode to call other future processes.</inlineHelpText>
    <label>Running in future (System Only)</label>
    <type>Checkbox</type>
</CustomField>