force-app/main/default/objects/User/fields/MUSW__Mapping_Service_API__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Mapping_Service_API__c</fullName>
    <label>Mapping Service API</label>
    <type>TextArea</type>
</CustomField>