force-app/main/default/objects/User/fields/MUSW__Mapping_Service_Key__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Mapping_Service_Key__c</fullName>
    <label>Mapping Service Key</label>
    <length>150</length>
    <type>Text</type>
</CustomField>