force-app/main/default/objects/User/fields/MUSW__Mapping_Service_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Mapping_Service_Name__c</fullName>
    <label>Mapping Service Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>