force-app/main/default/objects/User/fields/MUSW__Successor__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Successor__c</fullName>
    <description>The succeeding User will inherit all records currently associated with the User being deactivated</description>
    <inlineHelpText>The succeeding User will inherit all records currently associated with the User being deactivated</inlineHelpText>
    <label>Successor</label>
    <relationshipName>InactiveUsers</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>