force-app/main/default/objects/User/fields/MUSW__TempEmail__c.field-meta.xml
<CustomField>
    <fullName>MUSW__TempEmail__c</fullName>
    <label>TempEmail</label>
    <type>Email</type>
</CustomField>