force-app/main/default/objects/User/fields/MUSW__TempPassword__c.field-meta.xml
<CustomField>
    <fullName>MUSW__TempPassword__c</fullName>
    <label>TempPassword</label>
    <length>20</length>
    <type>Text</type>
</CustomField>